--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             align-items: center;
             height: 100vh;
             perspective: 1000px;
+            background-color: lightgray;
         }
         .cube{
             height: 150px;
