--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             transform: rotateX(10deg) rotateY(25deg);
             animation: rotateCubeSideUp 15s infinite linear;
         }
-        .card{
+        .face{
             height: 150px;
             width: 150px;
             display: flex;
@@ -56,12 +56,12 @@
 </head>
 <body>
     <div class="cube">
-        <div class="card Front">Front</div>
-        <div class="card Back">Back</div>
-        <div class="card Top">Top</div>
-        <div class="card Bottom">Bottom</div>
-        <div class="card Left">Left</div>
-        <div class="card Right">Right</div>
+        <div class="face Front">Front</div>
+        <div class="face Back">Back</div>
+        <div class="face Top">Top</div>
+        <div class="face Bottom">Bottom</div>
+        <div class="face Left">Left</div>
+        <div class="face Right">Right</div>
     </div>
 </body>
 </html>
