--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             position: relative;
             transform-style: preserve-3d;
             transform: rotateX(10deg) rotateY(25deg);
-            animation: rotateCubeSideUp 15s infinite linear;
+            animation: rotateCubeSideUp 5s ease-in-out infinite;
         }
         .face{
             height: 150px;
